[project]
name = "retrosynthesis-llm"
version = "0.1.0"
description = "LLM-assisted retrosynthesis with atom-level nucleophilicity/electrophilicity prediction"
requires-python = ">=3.9"
dependencies = [
    # ESNUEL_ML requirements
    "rdkit",
    "numpy<2",              # binary compat with scikit-learn 1.2.2 wheels
    "scikit-learn==1.2.2",  # models saved with 1.0.1; >=1.3 breaks RF unpickling
    "scipy",
    "seaborn",
    "pandas",
    "tqdm",
    "ipython",
    "lightgbm>=4.0.0",      # <4.0 has no macOS arm64 wheels; silent= kwarg removed in 4.x (patched)
    # Notebook support
    "jupyter",
    "ipykernel",
    # Agent / LLM (uses Ollama as local model server)
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/retrosynthesis_llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
